Fri Mar 12 19:01:35 1999  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (kshd): Add $(LOGINLIBS).

Mon Mar  8 19:21:23 1999  Tom Yu  <tlyu@mit.edu>

	* kshd.M: Resync manpage.

	* krshd.c: Rework hostname logging.

Wed Feb 24 20:05:40 1999  Tom Yu  <tlyu@mit.edu>

	* klogind.M: Resync manpage.

	* krlogind.c: Rework flags for hostname logging.

Mon Feb 22 22:26:32 1999  Tom Yu  <tlyu@mit.edu>

	* kcmd.c (kcmd): Fix up to not call sname_to_principal until after
	all the addresses in hp have been iterated through to avoid
	smashing. [krb5-appl/516]

	* kcmd.c (k4cmd): Move call to krb_realmofhost() to avoid smashing
	hp.

Wed Feb 17 17:24:11 1999  Tom Yu  <tlyu@mit.edu>

	* klogind.M: Document things a little better, including new
	options controlling hostname manipulation.

	* krlogind.c: Make use of pty_make_sane_hostname() for purposes of
	manipulating hostname to pass to login.  Also unconditionally
	syslog IP address and full hostname of remote host.  Add command
	line options to control such behavior.

	* configure.in: Add arpa/nameser.h to CHECK_HEADERS.

Wed Jan 20 21:42:41 1999  Tom Yu  <tlyu@mit.edu>

	* login.c (main): Call setluid().

	* krshd.c (doit): Call setluid().

	* configure.in: Check for setluid() rather than main() in
	libsecurity.

1998-11-28  Sam Hartman  <hartmans@mesas.com>

	* krshd.c krsh.c:  Use RCMD_BUFSIZ not RSH_BUFSIZE [krb5-appl/678]

	* kcmd.c: Move RCMD_BUFSIZ into defines.h

1998-11-16  Geoffrey King  <gjking@mit.edu>

	* login.c (login_get_kconf): Also test whether *kconf_val is null
 		rather than just kconf_val before passing *kconf_val to
 		conf_affirmative (where strcasecmp will choke on it
		if it is in fact null).

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)


1998-10-24  Marc Horowitz  <marc@mit.edu>

	* login.c: update to new get_creds API
	